# show-and-tell

.github/workflows/: edgedb.yaml
edgedb-vs-surrealdb/: .gitignore  README.md
edgedb-vs-surrealdb/edgedb/: Cargo.toml  README.md  check.hurl  check.sh  cleanup_tables.sh  setup.sh  teardown.sh
edgedb-vs-surrealdb/edgedb/dbschema/: default.esdl
edgedb-vs-surrealdb/edgedb/dbschema/migrations/: 00001.edgeql  00001.esdl
edgedb-vs-surrealdb/edgedb/fixtures/: get_repos_comtrya_comtrya.json  get_repos_icepuma_fbtoggl.json  get_users_icepuma_repos.json  get_users_icepuma_starred.json
edgedb-vs-surrealdb/edgedb/src/: controller.rs  error.rs  main.rs  model.rs  router.rs  router_tests.rs
